# MagicCube

./: .gitignore  README.rst  mypy.ini  pixi.toml  pyproject.toml  pyrightconfig.json  ruff.toml
code/: cube.py  cube_interactive.py  simple_cube.py
magiccube/: axes3d.py  cube.py  cube_interactive.py  projection.py  simple_cube.py
